# mirra

./: .env.example  .envrc  .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  PLAN.md  README.md  package.json
.claude/skills/: office-hours.md
app/: .gitignore  README.md  app.json  metro.config.js  package-lock.json  package.json
app/app/: _layout.tsx  conversation.tsx  reflect.tsx
app/app/(tabs)/: _layout.tsx  index.tsx  insights.tsx  profile.tsx  progress.tsx
app/src/api/: auth.ts  client.ts  status.ts  supabase.ts
app/src/auth/: AuthContext.tsx
app/src/components/: ExpandableMetric.tsx  FloatingTabBar.tsx  Icon.tsx  ReflectCTA.tsx  Screen.tsx  Typography.tsx  (+4 more)
backend/: .env.example  pyproject.toml
backend/app/: auth.py  billing.py  config.py  dashboard.py  db.py  main.py  open_model.py  usage.py  user_settings.py
backend/app/models/: account.py  auth.py  billing.py  dashboard.py  debrief.py  settings.py
backend/app/pipeline/: claude.py  coordinator.py  prosody.py  speaker.py  vad.py  whisper.py
backend/scripts/: smoke_auth.py
backend/tests/: conftest.py  test_account.py  test_auth.py  test_billing.py  test_dashboard.py  test_db.py  test_debriefs.py  test_health.py  test_pipeline.py  test_settings.py  test_usage_gate.py  test_username_auth.py
supabase/: .gitignore  config.toml
supabase/migrations/: 20260609050530_create_debriefs_and_debrief_usage.sql  20260707140254_create_user_settings.sql  20260707141000_optimize_existing_rls_policies.sql  20260707213101_create_billing_subscriptions.sql  20260708005554_expand_user_settings_schedule_options.sql
(+26 files in other folders)
